--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,4 +1,4 @@
-.form-container{
+.login-container{
     max-width: 400px;
     margin: 50px auto;
     padding: 40px;
@@ -8,12 +8,12 @@
     text-align: center;
 }
 
-.login-form h2 {
+.login-container h2 {
     margin-top: 0;
     margin-bottom: 30px;
 }
 
-.login-form label {
+.login-container label {
     display: block;
     margin-bottom: 10px;
 }
