--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,8 +1,8 @@
-.login-container{
+.login-container {
     max-width: 400px;
     margin: 50px auto;
     padding: 40px;
-    border: 1px solid #ddd;
+    border: 1px solid #8b0000;
     border-radius: 10px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
@@ -11,11 +11,13 @@
 .login-container h2 {
     margin-top: 0;
     margin-bottom: 30px;
+    color: #8b0000;
 }
 
 .login-container label {
     display: block;
     margin-bottom: 10px;
+    color: #8b0000;
 }
 
 .username-input, 
@@ -24,14 +26,14 @@
     padding: 10px;
     margin-bottom: 20px;
     font-size: 16px;
-    border: 1px solid #ddd;
+    border: 1px solid #8b0000;
     border-radius: 5px;
 }
 
 .button-login{
     width: 100%;
     padding: 10px;
-    background-color: #333;
+    background-color: #8b0000;
     color: #fff;
     border: 0;
     border-radius: 5px;
@@ -40,5 +42,5 @@
 }
 
 .button-login:hover{
-    background-color: #555;
+    background-color: #b22222;
 }
