--- a/src/components/Users/GestorAdmin/GestorAdmin.css
+++ b/src/components/Users/GestorAdmin/GestorAdmin.css
@@ -1,41 +1,20 @@
-.modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: white;
-  border: none;
-  outline: none;
-}
- 
-.modal-content {
-  background-color: white;
-  padding: 20px;
-  border-radius: 8px;
-}
-
-.form-container {
-  border: 2px solid red;
-  padding: 20px;
-  border-radius: 8px;
-}
-
 .gestor-admin-container {
   margin: 20px;
+  display: flex;
+  flex-direction: column;
 }
+
 
 .create-button {
   background-color: #8b0000;
   color: #fff;
   border: 0;
   border-radius: 5px;
-  font-size: 14px; 
+  font-size: 14px;
   cursor: pointer;
-  float: right;
-  margin-top: 10px;
-  padding: 8px; 
-  font-size: 12px; 
+  align-self: flex-end;
+  margin-bottom: 10px;
+  padding: 10px;
+  font-size: 12px;
+  margin-right: 10%
 }
-
-
-
