--- a/src/components/Users/GestorAdmin/GestorForm/EditForm.css
+++ b/src/components/Users/GestorAdmin/GestorForm/EditForm.css
@@ -1,43 +1,63 @@
-.gestor-form-container {
-  max-width: 400px;
-  margin: 50px auto;
-  padding: 40px;
-  border: 1px solid #8b0000;
-  border-radius: 10px;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-  text-align: center;
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  outline: none;
+  z-index: 9999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.gestor-form-container h2 {
-  margin-top: 0;
-  margin-bottom: 30px;
-  color: #8b0000;
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9998;
+}
+
+.modal-content {
+  background-color: white;
+  padding: 40%;
+  border-radius: 8px;
+  width: 400px;
+  max-width: 100%;
+}
+
+.gestor-form-container {
+  max-width: 100%;
+  margin: 0;
+  padding: 0;
+  border: none;
+  box-shadow: none;
 }
 
 .gestor-form-container label {
-  display: block;
+  display: inline-block;
   margin-bottom: 10px;
   color: #8b0000;
+  text-align: left;
 }
 
 .gestor-form-container input,
 .gestor-form-container select,
 .gestor-form-container button {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 20px;
-  font-size: 16px;
+  width: calc(100% - 40px); /* Resta 40px para tener en cuenta el padding */
+  padding: 8px;
+  margin-bottom: 10px;
+  font-size: 14px;
   border: 1px solid #8b0000;
   border-radius: 5px;
 }
 
 .gestor-form-container button {
-  background-color: #8b0000;
-  color: #fff;
-  border: 0;
-  border-radius: 5px;
-  font-size: 16px;
-  cursor: pointer;
+  padding: 8px 16px; /* Ajusta el padding vertical y horizontal */
+  font-size: 14px;
 }
 
 .gestor-form-container button:hover {
