--- a/src/components/Emergencies/PublishForm/PublishForm.css
+++ b/src/components/Emergencies/PublishForm/PublishForm.css
@@ -1,3 +1,37 @@
+.modal-publish {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  outline: none;
+  z-index: 9999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-publish-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9998;
+}
+
+.modal-publish-content {
+  background-color: white;
+  padding: 20px;
+  max-width: 400px; 
+  width: 100%; 
+  max-height: 100%;
+  overflow-y: auto;
+  border-radius: 8px;
+}
+
+
 .publish-form-container {
     max-width: 400px;
     margin: 50px auto;
