--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -1,99 +1,56 @@
-.Landing.Container {
+.landing-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background-color: #fff;
+  color: #8b0000;
+}
+
+.menu-box {
+  border: 1px solid #8b0000;
+  border-radius: 10px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+}
+
+.landing-title {
+  font-size: 2.5rem;
+  text-align: center;
+  color: #8b0000;
+  margin-bottom: 20px;
+}
+
+.menu-row {
   display: flex;
   justify-content: center;
-  align-items: center;
-  height: 80vh;
-  background-color: #ff5252; 
-  color: #fff;
+  align-items: flex-start;
+  margin-top: 20px;
 }
 
-.Landing.Container h1 {
-  font-size: 6rem;
+.menu-column {
   text-align: center;
-  color: #ff8a80;
+  margin: 0 20px;
+  padding: 10px;
 }
 
-.Menu {
+.menu-item-group {
   display: flex;
-  justify-content: space-around;
-  border-top: 2px solid #ff5252;
-  border-bottom: 2px solid #ff5252; 
-  padding: 0;
-  list-style-type: none;
-  margin: 0;
-  background-color: #8b0000; 
+  flex-direction: column;
+  align-items: center;
 }
 
-.Menu li {
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  width: 33.33%;
-}
-
-.Menu button {
-  background-color: #b30000; 
+.menu-item {
+  background-color: #8b0000;
   color: #fff;
-  border: none;
-  padding: 16px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
+  border: 0;
+  padding: 10px;
   font-size: 16px;
-  margin: 4px 2px;
+  margin: 10px 0;
   cursor: pointer;
-  border-radius: 20px; 
+  border-radius: 5px;
 }
 
-.Menu button:hover {
-  background-color: #ff1744;
-}
-
-.SubMenu {
-  display: none;
-  position: absolute;
-  z-index: 1;
-  background-color: #ff5252; /* Cambio de color de fondo a un rojo más suave */
-  color: #fff;
-  border-radius: 20px; /* Hace que los submenús tengan esquinas más redondeadas */
-}
-
-.SubMenu li {
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  width: 100%;
-}
-
-.SubMenu button {
-  background-color: #b30000; /* Cambio de color de fondo a un rojo más oscuro */
-  color: #fff;
-  border: none;
-  padding: 16px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  border-radius: 20px; /* Hace que los botones de los submenús tengan esquinas más redondeadas */
-}
-
-.SubMenu button:hover {
-  background-color: #ff1744; /* Cambio de color de fondo al pasar el mouse a un rojo más intenso */
-}
-
-.Menu li {
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  width: 33.33%;
-  position: relative; /* Agrega posicionamiento relativo a los elementos li del menú */
-}
-
-.Menu li:hover .SubMenu {
-  display: block;
-  position: absolute;
-  top: 100%; 
-  left: 35%; 
+.menu-item:hover {
+  background-color: #b22222;
 }
