--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,27 +1,39 @@
-/* CSS para el componente Modal */
 .modal-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
-  }
-  
-  .modal-content {
-    max-width: 400px;
-    padding: 40px;
-    background-color: #fff;
-    border: 1px solid #8b0000;
-    border-radius: 10px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-  }
-  
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9998;
+}
+
+.modal-content {
+  max-width: 400px;
+  padding: 40px;
+  background-color: #fff;
+  border: 1px solid #8b0000;
+  border-radius: 10px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  position: relative;
+  z-index: 9999;
+}
+
+
+
   .modal-content h3 {
     margin-top: 0;
     margin-bottom: 30px;
